--- a/examples/DotNetCore/ConsoleAppWithTableStorageReference/ConsoleAppWithTableStorageReference.csproj
+++ b/examples/DotNetCore/ConsoleAppWithTableStorageReference/ConsoleAppWithTableStorageReference.csproj
@@ -8,8 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Data.Tables" Version="12.8.0" />
     <PackageReference Include="Azure.Identity" Version="1.8.2" />
-    <PackageReference Include="Azure.Storage.Blobs" Version="12.15.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.AzureAppConfiguration" Version="6.0.0" />
   </ItemGroup>
 
